--- a/api/templates/auth-login.html
+++ b/api/templates/auth-login.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +7,15 @@
   <title>Login &mdash; Stisla</title>
 
   <!-- General CSS Files -->
-  <link rel="stylesheet" href="assets/modules/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/modules/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="{% static '/modules/bootstrap/css/bootstrap.min.css'%}">
+  <link rel="stylesheet" href="{% static '/modules/fontawesome/css/all.min.css'%}">
 
   <!-- CSS Libraries -->
-  <link rel="stylesheet" href="assets/modules/bootstrap-social/bootstrap-social.css">
+  <link rel="stylesheet" href="{% static '/modules/bootstrap-social/bootstrap-social.css'%}">
 
   <!-- Template CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/components.css">
+  <link rel="stylesheet" href="{% static '/css/style.css'%}">
+  <link rel="stylesheet" href="{% static '/css/components.css'%}">
 <!-- Start GA -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94034622-3"></script>
 <script>
@@ -33,19 +34,26 @@
         <div class="row">
           <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
             <div class="login-brand">
-              <img src="assets/img/stisla-fill.svg" alt="logo" width="100" class="shadow-light rounded-circle">
+              <img src="{% static '/img/stisla-fill.svg'%}" alt="logo" width="100" class="shadow-light rounded-circle">
             </div>
 
             <div class="card card-primary">
               <div class="card-header"><h4>Login</h4></div>
 
               <div class="card-body">
-                <form method="POST" action="#" class="needs-validation" novalidate="">
+                <form   method="POST"  class="needs-validation" novalidate="">
+                  {% csrf_token %}
+                  {% if error %}
+                  <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                  </div>
+                  {% endif %}
+
                   <div class="form-group">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" class="form-control" name="email" tabindex="1" required autofocus>
+                    <label for="username">Username or Email</label>
+                    <input id="username" type="text" class="form-control" name="username" tabindex="1" required autofocus>
                     <div class="invalid-feedback">
-                      Please fill in your email
+                      Please fill in your username or email
                     </div>
                   </div>
 
@@ -53,7 +61,7 @@
                     <div class="d-block">
                     	<label for="password" class="control-label">Password</label>
                       <div class="float-right">
-                        <a href="auth-forgot-password.html" class="text-small">
+                        <a href="{% url 'forgot' %}" class="text-small">
                           Forgot Password?
                         </a>
                       </div>
@@ -73,7 +81,7 @@
 
                   <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
-                      Login
+                      Loginnn
                     </button>
                   </div>
                 </form>
@@ -87,8 +95,8 @@
                     </a>
                   </div>
                   <div class="col-6">
-                    <a class="btn btn-block btn-social btn-twitter">
-                      <span class="fab fa-twitter"></span> Twitter
+                    <a class="btn btn-block btn-social btn-google">
+                      <span class="fab fa-google"></span> Google
                     </a>                                
                   </div>
                 </div>
@@ -96,7 +104,7 @@
               </div>
             </div>
             <div class="mt-5 text-muted text-center">
-              Don't have an account? <a href="auth-register.html">Create One</a>
+              Don't have an account? <a href="{% url 'register' %}">Create One</a>
             </div>
             <div class="simple-footer">
               Copyright &copy; Stisla 2018
@@ -108,20 +116,20 @@
   </div>
 
   <!-- General JS Scripts -->
-  <script src="assets/modules/jquery.min.js"></script>
-  <script src="assets/modules/popper.js"></script>
-  <script src="assets/modules/tooltip.js"></script>
-  <script src="assets/modules/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/modules/nicescroll/jquery.nicescroll.min.js"></script>
-  <script src="assets/modules/moment.min.js"></script>
-  <script src="assets/js/stisla.js"></script>
+  <script src="{% static '/modules/jquery.min.js'%}"></script>
+  <script src="{% static '/modules/popper.js'%}"></script>
+  <script src="{% static '/modules/tooltip.js'%}"></script>
+  <script src="{% static '/modules/bootstrap/js/bootstrap.min.js'%}"></script>
+  <script src="{% static '/modules/nicescroll/jquery.nicescroll.min.js'%}"></script>
+  <script src="{% static '/modules/moment.min.js'%}"></script>
+  <script src="{% static '/js/stisla.js'%}"></script>
   
   <!-- JS Libraies -->
 
   <!-- Page Specific JS File -->
   
   <!-- Template JS File -->
-  <script src="assets/js/scripts.js"></script>
-  <script src="assets/js/custom.js"></script>
+  <script src="{% static '/js/scripts.js'%}"></script>
+  <script src="{% static '/js/custom.js'%}"></script>
 </body>
 </html>
